syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "ExampleProto";

package com.github.aanbrn.spring.cloud.contract.example;

service ExampleService {
  rpc UnaryMethod (UnaryRequest) returns (UnaryResponse);
  rpc ClientStreamingMethod (stream ClientStreamingRequest) returns (ClientStreamingResponse);
  rpc ServerStreamingMethod (ServerStreamingRequest) returns (stream ServerStreamingResponse);
  rpc BidiStreamingMethod (stream BidiStreamingRequest) returns (stream BidiStreamingResponse);
}

message UnaryRequest {
  int64 value = 1;
}

message UnaryResponse {
  int64 value = 1;
}

message ClientStreamingRequest {
  int64 value = 1;
}

message ClientStreamingResponse {
  repeated int64 value = 1;
}

message ServerStreamingRequest {
  repeated int64 value = 1;
}

message ServerStreamingResponse {
  int64 value = 1;
}

message BidiStreamingRequest {
  int64 value = 1;
}

message BidiStreamingResponse {
  int64 value = 1;
}
